# schema-tui

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
examples/: DYNAMIC_OPTIONS.md  dynamic_options.rs  dynamic_options_schema.json  simple_config.rs
examples/scripts/: list-models.sh
src/: lib.rs
src/config/: env.rs  loader.rs  mod.rs  saver.rs  store.rs
src/options/: cache.rs  mod.rs  resolver.rs
src/schema/: mod.rs  parser.rs  types.rs  validation.rs
src/tui/: actions.rs  app.rs  builder.rs  conditions.rs  mod.rs  theme.rs
src/tui/widgets/: base.rs  dropdown.rs  float_input.rs  mod.rs  number_input.rs  searchable_dropdown.rs  text_input.rs  toggle.rs
tests/: config_loading.rs  schema_parsing.rs  widgets.rs
