[package]
name = "schema-tui"
version = "0.1.0"
edition = "2021"
authors = ["Mason Rhodes <mason@masonrhodes.dev>"]
license = "MIT"
description = "Generic schema-driven terminal user interface for configuration management"
repository = "https://github.com/MasonRhodesDev/schema-tui"
keywords = ["tui", "terminal", "config", "schema", "ratatui"]
categories = ["command-line-interface", "config"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

# Async
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Utilities
regex = "1.10"
glob = "0.3"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
